# genome-editor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  plan.md  spec.md  todo.md  vite.config.ts
.github/workflows/: rust.yml  tauri.yml
crates/alignment/: Cargo.toml
crates/alignment/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: alignment.rs  enzyme.rs  lib.rs  orf.rs
crates/enzyme/: Cargo.toml
crates/enzyme/benches/: enzyme_bench.rs
crates/enzyme/data/: rebase_enzymes.json
crates/enzyme/src/: database.rs  iupac.rs  lib.rs  search.rs
crates/orf/: Cargo.toml
crates/orf/benches/: orf_bench.rs
crates/orf/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parse_bench.rs
crates/parser/src/: fasta.rs  genbank.rs  lib.rs
crates/testdata/: lambda.gb  pUC19.gb
crates/wasm/: Cargo.toml
crates/wasm/src/: alignment_api.rs  enzyme_api.rs  lib.rs  orf_api.rs  parser_api.rs
crates/wasm/tests/: web.rs
docs/: phase0-evaluation.md  plan.md  spec.md
pkg/: genome_editor_wasm.d.ts  genome_editor_wasm.js  genome_editor_wasm_bg.wasm  genome_editor_wasm_bg.wasm.d.ts  package.json
src/: App.css  App.test.tsx  App.tsx  main.tsx  store.test.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: alignment.rs  enzyme.rs  file.rs  mod.rs  orf.rs
src/backend/: index.ts  tauri.ts  types.ts  wasm.ts
src/components/: AlignmentDetail.tsx  AlignmentInputPanel.tsx  AlignmentMode.tsx  AlignmentOverview.tsx  AnnotationListPanel.test.tsx  AnnotationListPanel.tsx  ContextMenu.tsx  CutSiteList.tsx  EditPanel.test.tsx  EditPanel.tsx  FileLoader.tsx  LoadingOverlay.tsx  ModeTabs.tsx  MsaPanel.tsx  SearchPanel.test.tsx  SearchPanel.tsx  SelectionInfoPanel.test.tsx  SelectionInfoPanel.tsx  SeqViewer.test.tsx  SeqViewer.tsx  Sidebar.tsx  ViewerControls.tsx
src/hooks/: useAlignmentAnalysis.ts  useEnzymes.ts  useGenBankParser.ts  useMsaAlignment.ts  useOrfs.ts  usePerformance.test.ts  usePerformance.ts  useTheme.test.ts  useTheme.ts  useWasmParser.ts
src/types/: alignment.ts  selection.ts  sequence.ts  wasm.ts
src/utils/: alignmentMapping.test.ts  alignmentMapping.ts  aminoAcidEffects.test.ts  aminoAcidEffects.ts  codonTable.test.ts  codonTable.ts  performance.test.ts  performance.ts  sequenceEdit.test.ts  sequenceEdit.ts  variantDetection.test.ts  variantDetection.ts
src/wasm/: init.ts
