[workspace]
members = ["crates/*"]
exclude = ["crates/testdata"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
tsify-next = { version = "0.5", features = ["js"] }
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
