[package]
name = "genome-editor-tauri"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
genome-editor-core = { path = "../crates/core" }
genome-editor-parser = { path = "../crates/parser" }
genome-editor-enzyme = { path = "../crates/enzyme" }
genome-editor-orf = { path = "../crates/orf" }
genome-editor-alignment = { path = "../crates/alignment" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }

[lib]
name = "genome_editor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
