[package]
name = "genome-editor-alignment"
version = "0.1.0"
edition = "2024"

[features]
default = ["full"]
full = ["dep:bio"]

[dependencies]
genome-editor-core = { path = "../core" }
bio = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
