[package]
name = "genome-editor-enzyme"
version = "0.1.0"
edition = "2024"

[dependencies]
genome-editor-core = { path = "../core" }
aho-corasick = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
genome-editor-parser = { path = "../parser" }

[[bench]]
name = "enzyme_bench"
harness = false
